# openrelik-worker-ip-extractor

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
src/: evtx_ip_extract.py  linux_ip_extract.py  tasks.py
